02-Atulaização img mapa

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         </div>
         <div class="container-contact">
             <div class="img">
-                <img src="img/img-map.jpg" alt="">
+                <img src="img/Screenshot_20220625-162720_Maps.jpg" alt="">
             </div>
             <div class="text">
                 <h1>Entre em contato</h1>
