--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <a href="#contact" class="about-a">CONTATO</a>
             </div>
             <div class="icons">
-                <img src="img/icons8-search-50.png" alt="">
-                <img src="img/icons8-shopping-cart-24.png" alt="">
+                <!-- <img src="img/procurar.png" alt=""> -->
+                <a href="https://www.salao99.com.br/23396/09f150ff5d5e"><img src="img/calendario2.png" alt=""></a>
             </div>
         </nav>
 
